# gstack-playbook-compiler

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
automation/: run_gstack_compiler.py
automation/gstack_to_markdown_playbook_v1/: __init__.py  author_context.py  cli.py  emit_markdown.py  ir_models.py  llm_clients.py  parse_gstack.py  path_policy.py  provenance.py  quality_gates.py  row_author.py  row_models.py  row_repair.py  stack_detect.py  validators.py  verification_command_policy.py  verification_policy.py
automation/gstack_to_markdown_playbook_v1/prompts/: row_author.md  row_author_v2.md  row_repair.md  row_repair_v2.md
automation/gstack_to_markdown_playbook_v1/schemas/: compiler_validation_report_v1.schema.json  gstack_plan_ir_v1.schema.json  po_candidate_rows_v1.schema.json  row_author_context_v1.schema.json  row_author_trace_v1.schema.json  row_repair_trace_v1.schema.json
automation/gstack_to_markdown_playbook_v1/tests/: test_author_context.py  test_cli_guards.py  test_emit_po_roundtrip.py  test_llm_clients.py  test_parse_gstack_tasks.py  test_path_policy.py  test_quality_gates.py  test_row_author.py  test_row_repair.py  test_sidecar_schemas.py  test_smoke.py  test_validate_paths.py  test_verification_command_policy.py  test_verification_policy.py
templates/product_repo/automation/: run_gstack_compiler.py
